Adding all the base pages + a definition style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 
-    <title>iHeartRadio Guidelines</title>
+    <title>iHeartRadio Developer Site :: Overview</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles/main.css" type="text/less" media="screen" />
@@ -32,18 +32,12 @@
         <nav>
             <h1><a href="index.html">iHeartRadio</a></h1>
             <ul>
-                <li><a href="#">API</a></li>
-                <li><a href="#">Brand Guide</a></li>
-                <li><a href="#" class="on">UX Guidelines</a></li>
-                <li><a href="#">Web Style Guide</a></li>
+                <li><a href="index.html" class="on">Overview</a></li>
+                <li><a href="apis.html">APIs</a></li>
+                <li><a href="design.html">Design</a></li>
+                <li><a href="quality.html">Quality Assurance</a></li>
             </ul>
         </nav>
-        <ul class="subNav">
-            <li><a href="#">Branding Examples</a></li>
-            <li><a href="#">Branding Guidelines</a></li>
-            <li><a href="#">Iconography</a></li>
-            <li><a href="#">Experience Outcomes</a></li>
-        </ul>
     </header>
 
     <!-- Sidebar -->
@@ -153,16 +147,16 @@
         <!-- Article Header -->
         <header>
             <hgroup>
-                <h1 itemprop="name">Value Propositions / <br/>Experience Outcomes</h1>
-                <p itemprop="description">Loremet dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <h1 itemprop="name">H1 - Article Header, 220px tall, space for 300px Image</h1>
+                <p itemprop="description">Loremet dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation quis nostru.  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>   <a href="#" class="readmore">Read More &raquo;</a>
             </hgroup>
-            <img src="img/fpo_value.png">
+            <img src="img/fpo_home.png">
         </header>
 
 
         <section>
-            <h2>Experience Outcomes</h2>
+            <h2>H2 - Bulleted List</h2>
 
             <!-- Bullet Points -->
             <ul class="bullets">
@@ -174,20 +168,20 @@
 
             <!-- Columned Modules -->
             <div class="col gutter">
-                <h4>Custom Radio</h4>
+                <h4>H4 - Two column blurbs</h4>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-                <h4>Social Stuff</h4>
+                <h4>H4 - Two column blurbs</h4>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
                 <p>Dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
             </div>
 
             <div class="col">
-                <h4>Favoriting Favorites</h4>
+                <h4>H4 - Favoriting Favorites</h4>
                 <p>Deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et.
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-                <h4>Artist Bios, Song Lyrics &amp; Photos</h4>
+                <h4>H4 - Artist Bios, Song Lyrics &amp; Photos</h4>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
             </div>
 
@@ -207,7 +201,7 @@
 
         <!-- Text Block -->
         <section>
-            <h3>Branding</h3>
+            <h3>H3 - Full Width Text Block with Article Aside</h3>
             <!-- Article Aside -->
             <aside>
                 <h5>Article Aside</h5>
@@ -223,18 +217,44 @@
             <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque ear</p>
             <p>um rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
             <!-- Callout -->
-            <p class="callout">Callout. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas as</p>
+            <p class="callout"><b>Callout</b> Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas as</p>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
             <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
             <!-- Callout Note -->
-            <p class="callout note">Callout Note. um rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+            <p class="callout important"><b>Callout Important!</b> um rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
             <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque ear</p>
             <!-- Callout Highlight -->
-            <p class="callout highlight">Callout Highlight. um rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+            <p class="callout highlight"><b>Callout Highlight</b> um rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+        </section>
+
+        <!-- Text Block -->
+        <section>
+            <h3>H3 - Two Column Definition List, Image &amp; Description</h3>
+
+            <dl>
+                <dt><img src="img/icons/BuySong.png" alt="Buy Song Icon"></dt>
+                <dd>
+                    <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                </dd>
+                <dt><img src="img/icons/Lyrics.png" alt="Buy Song Icon"></dt>
+                <dd>
+                    <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                </dd>
+                <dt><img src="img/icons/Create.png" alt="Buy Song Icon"></dt>
+                <dd>
+                    <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                </dd>
+
+            </dl>
 
         </section>
+
+
 
     </article>
 
