Icon definition listwith min-height 40px per item

--- a/index.html
+++ b/index.html
@@ -234,31 +234,25 @@
             <h3>H3 - Two Column Definition List, Image &amp; Description</h3>
 
             <dl>
-                <dt><img src="img/icons/BuySong.png" alt="Buy Song Icon"></dt>
+                <dt><img src="img/icons/BuySong.png" alt="Buy Song Icon" width="40" height="40"></dt>
                 <dd>
                     <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-                </dd>
-                <dt><img src="img/icons/Lyrics.png" alt="Buy Song Icon"></dt>
-                <dd>
-                    <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-                </dd>
-                <dt><img src="img/icons/Create.png" alt="Buy Song Icon"></dt>
-                <dd>
-                    <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-                </dd>
 
+                </dd>
+                <dt><img src="img/icons/Lyrics.png" alt="Buy Song Icon" width="40" height="40"></dt>
+                <dd>
+                    <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
+
+                </dd>
+                <dt><img src="img/icons/Create.png" alt="Buy Song Icon" width="40" height="40"></dt>
+                <dd>
+                    <b>Definition for icon goes here</b> &mdash; <em>Icons should be 50px wide for consistency, height can vary.</em>
+
+                </dd>
             </dl>
-
         </section>
 
-
-
     </article>
-
-
 
 </div>
 
