Added Additional UX Guidelines Pages

--- a/ux-guidelines/home-screen.html
+++ b/ux-guidelines/home-screen.html
@@ -52,14 +52,14 @@
             <!-- Section Navigation -->
             <ul class="contentsNav">
                 <li>
-                    <div class="contentsHd"><a href="value.html">Value Propositions / <span><br/></span>Experience Outcomes</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/value.html">Value Propositions <span><br/></span>&amp; Experience Outcomes</a></div>
                     <ul class="sub-menu">
                         <li><a href="#">Primary Value Propositions</a></li>
                         <li><a href="#">Experience Outcomes</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="branding.html">Application Branding &amp;<span><br/></span> Iconography</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/branding.html">Application Branding <span><br/></span>&amp; Iconography</a></div>
                     <ul class="sub-menu">
                         <li><a href="#">Branding Guidelines</a></li>
                         <li><a href="#">Branding Examples</a></li>
@@ -67,74 +67,74 @@
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="navigation.html">Navigation</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/architecture.html">Information Architecture <span><br/></span>&amp; Navigation</a></div>
                     <ul class="sub-menu">
-                        <li><a href="#">Now Playing</a></li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Find</a></li>
-                        <li><a href="#">Create</a></li>
-                        <li><a href="#">Search</a></li>
-                        <li><a href="#">Settings</a></li>
+                        <li><a href="#">Information Architecture</a></li>
+                        <li><a href="#">Navigation</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="player.html">Player</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/player.html">Now Playing View</a></div>
                     <ul class="sub-menu">
-                        <li><a href="#">Live Player</a></li>
-                        <li><a href="#">Custom Player</a></li>
+                        <li><a href="#">Live Radio</a></li>
+                        <li><a href="#">DMCA Radio</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="home.html">Home</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/home.html">Home</a></div>
                     <ul class="sub-menu">
+                        <li><a href="#">Personalization</a></li>
                         <li><a href="#">Featured Content Carousel</a></li>
-                        <li><a href="#">Recently Played</a></li>
+                        <li><a href="#">Sherpa</a></li>
                         <li><a href="#">Stations Near You</a></li>
                         <li><a href="#">Featured Custom Artist Stations</a></li>
                         <li><a href="#">iHeartRadio Originals</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="find">Find</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/find">Live Radio</a></div>
                     <ul class="sub-menu">
+                    	<li><a href="#">Popular</a></li>
                         <li><a href="#">By Location</a></li>
-                        <li><a href="#">By Genre</a></li>
-                        <li><a href="#">Featured Custom Stations</a></li>
-                        <li><a href="#">iHeartRadio Originals</a></li>
+                        <li><a href="#">By Genre/Format</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="create.html">Create</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/create.html">Create Station</a></div>
                     <ul class="sub-menu">
-                        <li><a href="#">Didactics / Wizards</a></li>
+                        <li><a href="#">Create Station Search &amp; Didactic</a></li>
+                        <li><a href="#">Sherpa</a></li>
+                        <li><a href="#">Featured Custom Stations</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="search.html">Search</a></div>
+                	<div class="contentsHd"><a href="ux-guidelines/search.html">Favorites</a></div>
+                	<ul class="sub-menu">
+                		<li><a href="#">User Profile</a></li>
+                	    <li><a href="#">Favorite Stations</a></li>
+                	    <li><a href="#">Favorite Songs</a></li>
+                	    <li><a href="#">Listen History</a></li>
+                	    <li><a href="#">Friends</a></li>
+                	</ul>
+                </li>
+                <li>
+                    <div class="contentsHd"><a href="ux-guidelines/search.html">Search</a></div>
                     <ul class="sub-menu">
                         <li><a href="#">Didactics</a></li>
                         <li><a href="#">Results</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="profile">Profile</a></div>
-                    <ul class="sub-menu">
-                        <li><a href="#">My Stations</a></li>
-                        <li><a href="#">Songs I Like</a></li>
-                        <li><a href="#">Listen History</a></li>
-                        <li><a href="#">Friends</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <div class="contentsHd"><a href="fux.html">First Use Experience &amp;<span><br/></span> Account Authentication</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/fux.html">First Use Experience <span><br/></span>&amp; Account Authentication</a></div>
                     <ul class="sub-menu">
                         <li><a href="#">First Use Experience / Registration Semi-Gate</a></li>
                         <li><a href="#">Contextual Registration Gate</a></li>
                         <li><a href="#">Log Out</a></li>
+                        <li><a href="#">Account Handling</a></li>
                     </ul>
                 </li>
                 <li>
-                    <div class="contentsHd"><a href="settings.html">Settings</a></div>
+                    <div class="contentsHd"><a href="ux-guidelines/settings.html">Settings</a></div>
                     <ul class="sub-menu">
                         <li><a href="#">Account Settings</a></li>
                         <li><a href="#">Options</a></li>
@@ -153,7 +153,7 @@
         <header>
             <hgroup>
                 <h1>Home Screen</h1>
-                	<p itemprop="description">The home screen is an opportunity to present the app's primary value propositions as well as any merchandised content that our programming team would like to promote. Not all devices will support a home screen. For instance, type of browsing that the home screen encourages is not appropriate in an automotive application.</p>
+                	<p itemprop="description">The home screen is an opportunity to present the app's primary value propositions as well as any merchandised content that our programming team would like to promote. Not all devices will support a home screen. For instance, the type of browsing that the home screen encourages is not appropriate in an automotive application.</p>
             </hgroup>
             <img src="../img/fpo_value.png">
            
@@ -161,6 +161,9 @@
 		
 		<section>
 		
+			<h2>Personalization</h2>
+				<p>Returning users who are authenticated with an iHeartRadio account should be greeted with a quick way to listen to their most recent stations.</p>
+			
 			<h2>Featured Content Carousel</h2>
 					<p>The featured content carousel will display up to five hand created slides. Each slide will contain the following components:
 					<ul class="bullets">
@@ -182,7 +185,7 @@
 					<p>This list is hand curated by our programming team. 3 to 6 Custom stations should be displayed. This is an important opportunity to communicate the functionality of a Custom station. Each station listing should be accompanied by a list of artists who's music will play on that station titled "Featuring music from:"</p>
 			
 				<h2>iHeartRadio Originals</h2>
-					<p></p>
+					<p>A few of the most recently added iHeartRadio Originals should be listed on the home screen.</p>
 			
 		
 		</section>
